Completed visualisation first and second section, and begin the third one

--- a/index.html
+++ b/index.html
@@ -16,9 +16,43 @@
                 </div>
             </div>
         </div>
-        <div class="first"> </div>
-        <div class="second"> </div>
-        <div class="third"></div>
+        <div class="first_section">
+            <div class="trigger_time">
+                <button class="first_section_button">
+                    <p class="first_section_button_text">Complete: After stage changing</p>
+                    <p class="button_arrow"></p>
+                </button>
+            </div>
+            <div class="distribution_type">
+                <h3>Choose type distribution</h3>
+                <button class="first_section_button">
+                    <p class="first_section_button_text">Take turns without schedule count</p>
+                    <p class="button_arrow"></p>
+                </button>
+            </div>
+            <div class="managers_distribution">
+                <h3>Choose managers for distribution</h3>
+                <button class="first_section_button">
+                    <p class="first_section_button_text">Choose managers</p>
+                    <p class="button_arrow"></p>
+                </button>
+            </div>
+        </div>
+        <div class="second_section">
+            <div class="checkbox_container">
+                <input type="checkbox" class="second_section_checkbox"> 
+                <p class="second_section_checkbox_text">Make responsible in related essence</p>
+            </div>
+            <div class="checkbox_container">
+                <input type="checkbox" class="second_section_checkbox"> 
+                <p class="second_section_checkbox_text">Apply this trigger to current leads in stage</p>
+            </div>
+        </div>
+        <div class="third_section">
+            <button>Done</button>
+            <button>Сancel</button>
+            <button>Delete</button>
+        </div>
     </div>
 </body>
 <script src="/script.js"></script>
