Add list in choose type distribution button and function to open this list

--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
             </div>
             <div class="distribution_type">
                 <h3>Choose type distribution</h3>
-                <button class="first_section_button">
-                    <p class="first_section_button_text">Take turns without schedule count</p>
+                <button class="first_section_button distribution_type_list hidden-content">
+                    <p class="first_section_button_text first_text">Take turns without schedule count</p>
                     <p class="button_arrow"></p>
                 </button>
+                <div class="first_section_button_list">  
+                    <p class="first_section_button_text second_text text_list">Take turns with schedule count</p>
+                    <p class="first_section_button_text third_text text_list">Set workload percentage</p>
+                </div>
             </div>
             <div class="managers_distribution">
                 <h3>Choose managers for distribution</h3>
@@ -49,9 +53,9 @@
             </div>
         </div>
         <div class="third_section">
-            <button>Done</button>
-            <button>Сancel</button>
-            <button>Delete</button>
+            <button class="done_button">Done</button>
+            <button class="cancel_button">Сancel</button>
+            <button class="delete_button">Delete</button>
         </div>
     </div>
 </body>
