Add managers list and function to open it

--- a/index.html
+++ b/index.html
@@ -19,29 +19,34 @@
         <div class="first_section">
             <div class="trigger_time">
                 <button class="first_section_button">
-                    <p class="first_section_button_text">Complete: After stage changing</p>
+                    <p class="trigger_time_button_text">Complete: After stage changing</p>
                     <p class="button_arrow"></p>
                 </button>
             </div>
             <div class="distribution_type">
                 <h3>Choose type distribution</h3>
                 <button class="first_section_button distribution_type_list hidden-content">
-                    <p class="first_section_button_text first_text">Take turns without schedule count</p>
+                    <p class="distribution_type_button_text">Take turns without schedule count</p>
                     <p class="button_arrow"></p>
                 </button>
-                <div class="first_section_button_list">  
-                    <p class="first_section_button_text second_text text_list">Take turns with schedule count</p>
-                    <p class="first_section_button_text third_text text_list">Set workload percentage</p>
+                <div class="distribution_type_button_list">  
+                    <p class="distribution_type_button_text text_list">Take turns with schedule count</p>
+                    <p class="distribution_type_button_text text_list">Set workload percentage</p>
                 </div>
             </div>
             <div class="managers_distribution">
                 <h3>Choose managers for distribution</h3>
-                <button class="first_section_button">
-                    <p class="first_section_button_text">Choose managers</p>
+                <button class="first_section_button managers_distribution_list hidden-content">
+                    <p class="managers_distribution_button_text">Choose managers</p>
                     <p class="button_arrow"></p>
                 </button>
+                <div class="managers_distribution_button_list">  
+                    <p class="managers_distribution_button_text text_list">First user</p>
+                    <p class="managers_distribution_button_text text_list">Second user</p>
+                </div>
             </div>
         </div>
+        
         <div class="second_section">
             <div class="checkbox_container">
                 <input type="checkbox" class="second_section_checkbox"> 
